# q2e-weapon-recoil

./: .gitignore  .gitmodules  CMakeLists.txt  PLAN.md  README.md  description.txt  flake.nix
.github/: copilot-instructions.md
.github/workflows/: build-windows.yml
cmake/: zig-windows.cmake
sdk/rerelease/: g_local.h  g_main.cpp  g_save.cpp  p_view.cpp  p_weapon.cpp  q_std.h  recoil_model.cpp  recoil_model.h
sdk/rerelease/ctf/: g_ctf.cpp
sdk/rerelease/rogue/: p_rogue_weapon.cpp
sdk/rerelease/xatrix/: p_xatrix_weapon.cpp
src/: recoil.h  stub.cpp
tests/: recoil_model_tests.cpp
